--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hrishi ❤️ Adi – Forever</title>
+  <title>Hrishi and Adi 🌹 Forever</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       background: radial-gradient(circle, #ffe6e6, #fff);
       overflow: hidden;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
     }
-    h1 {
-      margin-top: 20px;
-      color: #d6336c;
-    }
+    h1 { margin-top: 20px; color: #d6336c; }
     .rose {
       position: absolute;
       font-size: 30px;
@@ -24,54 +20,39 @@
       opacity: 0;
     }
     @keyframes rise {
-      from {
-        transform: translateY(100vh);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(-10vh);
-        opacity: 1;
-      }
+      from { transform: translateY(100vh); opacity: 0; }
+      to { transform: translateY(-10vh); opacity: 1; }
     }
     .message {
-      position: absolute;
-      bottom: 60px;
-      width: 100%;
-      font-size: 20px;
-      color: #d6336c;
+      position: absolute; bottom: 60px;
+      width: 100%; font-size: 20px; color: #d6336c;
     }
     .drive-link {
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
+      position: absolute; bottom: 20px;
+      width: 100%; font-size: 18px; color: #d6336c;
     }
     .drive-link a {
-      text-decoration: none;
-      background: #d6336c;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 20px;
-      font-size: 18px;
-      font-weight: bold;
+      color: #d6336c; text-decoration: none; font-weight: bold;
     }
-    audio {
-      display: none;
-    }
+    audio { position: fixed; top: 10px; left: 10px; }
   </style>
 </head>
 <body>
-  <h1>🌹 Happy 5th Anniversary – Hrishi ❤️ Adi 🌹</h1>
-
+  <h1>🌹 Happy 5th Anniversary – Hrishi and Adi 🌹</h1>
+  
   <div class="message">
-    Thank you for blooming in my life. I love you forever, Hrishi ❤️
+    Thank you for blooming in my life. I love you forever, HrishiiAdi ❤️
   </div>
 
   <div class="drive-link">
-    <a href="https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link" target="_blank">Click Here Jaaanuuu ❤️</a>
+    <a href="https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link" target="_blank">
+      Click Here Jaaanuuu 💖
+    </a>
   </div>
 
-  <audio autoplay loop>
-    <source src="https://www.dropbox.com/scl/fi/6og4gw2ow8qqkqc3j4jxn/Tum-Hi-Ho-From-Aashiqui-2.mp3?rlkey=m66eqbg4t250wh13j61h380uv&st=tu0hzarq&dl=1" type="audio/mpeg">
+  <audio controls autoplay loop>
+    <source src="https://www.dropbox.com/scl/fi/juodnskfyikm473hrs5jl/Meri-Aashiqui-Aashiqui-2-320-Kbps.mp3?rlkey=7i3wnt1df8qqg3oyfz3azy1fp&st=bphhm57d&raw=1" type="audio/mpeg">
+    Your browser does not support the audio element.
   </audio>
 
   <script>
