--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hrishi and Adi 🌹 Forever</title>
+  <title>Hrishi and Adi 🌹❤️</title>
   <style>
     body {
       margin: 0; padding: 0;
@@ -27,32 +27,31 @@
       position: absolute; bottom: 60px;
       width: 100%; font-size: 20px; color: #d6336c;
     }
-    .drive-link {
-      position: absolute; bottom: 20px;
-      width: 100%; font-size: 18px; color: #d6336c;
+    .drive-button {
+      position: absolute; bottom: 10px;
+      left: 50%; transform: translateX(-50%);
+      background-color: #d6336c;
+      color: white; padding: 10px 20px;
+      border: none; border-radius: 20px;
+      font-size: 18px;
+      text-decoration: none;
     }
-    .drive-link a {
-      color: #d6336c; text-decoration: none; font-weight: bold;
-    }
-    audio { position: fixed; top: 10px; left: 10px; }
+    audio { display: none; }
   </style>
 </head>
 <body>
-  <h1>🌹 Happy 5th Anniversary – Hrishi and Adi 🌹</h1>
-  
+  <h1>🌹 Happy 5th Anniversary – Hrishi ❤️ Adi 🌹</h1>
+
   <div class="message">
-    Thank you for blooming in my life. I love you forever, HrishiiAdi ❤️
+    Thank you for blooming in my life. I love you forever, Hrishi ❤️
   </div>
 
-  <div class="drive-link">
-    <a href="https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link" target="_blank">
-      Click Here Jaaanuuu 💖
-    </a>
-  </div>
+  <a class="drive-button" href="https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link" target="_blank">
+    Click Here Jaanuuu 💖
+  </a>
 
-  <audio controls autoplay loop>
-    <source src="https://www.dropbox.com/scl/fi/juodnskfyikm473hrs5jl/Meri-Aashiqui-Aashiqui-2-320-Kbps.mp3?rlkey=7i3wnt1df8qqg3oyfz3azy1fp&st=bphhm57d&raw=1" type="audio/mpeg">
-    Your browser does not support the audio element.
+  <audio autoplay loop>
+    <source src="https://www.dropbox.com/scl/fi/juodnskfyikm473hrs5jl/Meri-Aashiqui-Aashiqui-2-320-Kbps.mp3?rlkey=7i3wnt1df8qqg3oyfz3azy1fp&raw=1" type="audio/mpeg">
   </audio>
 
   <script>
