--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hrishi ❤️ Adi 🌹</title>
+  <title>Hrishi ❤️ Adi</title>
   <style>
     body {
       margin: 0; padding: 0;
-      background: radial-gradient(circle, #ffe6e6, #fff);
+      background: radial-gradient(circle, #ffe6f0, #fff);
       overflow: hidden;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
     }
-    h1 { margin-top: 20px; color: #d6336c; }
+    h1 {
+      margin-top: 20px;
+      color: #d6336c;
+      font-size: 26px;
+    }
     .rose {
       position: absolute;
       font-size: 30px;
@@ -24,63 +28,64 @@
       to { transform: translateY(-10vh); opacity: 1; }
     }
     .message {
-      position: absolute; bottom: 60px;
-      width: 100%; font-size: 20px; color: #d6336c;
-    }
-    .drive-button {
-      position: absolute; bottom: 10px;
-      left: 50%; transform: translateX(-50%);
-      background-color: #d6336c;
-      color: white; padding: 10px 20px;
-      border: none; border-radius: 20px;
+      position: absolute;
+      bottom: 80px;
+      width: 90%;
+      left: 5%;
       font-size: 18px;
-      text-decoration: none;
+      color: #b30059;
+      line-height: 1.5;
     }
+    .gift {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #ff66a3;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-size: 16px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: background 0.3s;
+    }
+    .gift:hover {
+      background: #e60073;
+    }
+    audio { display: none; }
   </style>
 </head>
 <body>
-  <h1>🌹 Happy 5th Anniversary – Hrishi ❤️ Adi 🌹</h1>
-
+  <h1>❤️ Hrishi & Adi ❤️</h1>
+  
   <div class="message">
-    Thank you for blooming in my life. I love you forever, Jaanuuu ❤️
+    ❤️ “Hum dono ka pyaar na bas lafzon me hai, na hi sirf ehsaason me…<br>
+    Ye to wo rishta hai jo rooh tak utar gaya hai…<br>
+    Jitna sochu utna hi gehra lagta hai,<br>
+    Jaise dil ne sirf aap ko chahne ke liye dhadakna seekha ho.” ❤️<br><br>
+
+    🌸 “Aap ki yaadon ka ek kone me bhi itna sukoon hai,<br>
+    Sochta hoon agar aap saamne ho to poori duniya kitni haseen lagne lagegi…” 🌸
   </div>
+  
+  <a class="gift" href="https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link" target="_blank">🎁 Click Here My Jaanu 🎁</a>
 
-  <a class="drive-button" href="https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link" target="_blank">
-    Click Here Jaanuuu 💖
-  </a>
-
-  <audio id="bgMusic" loop>
-    <source src="https://www.dropbox.com/scl/fi/6og4gw2ow8qqkqc3j4jxn/Tum-Hi-Ho-From-Aashiqui-2.mp3?rlkey=m66eqbg4t250wh13j61h380uv&raw=1" type="audio/mpeg">
+  <audio autoplay loop>
+    <source src="https://www.dropbox.com/scl/fi/6og4gw2ow8qqkqc3j4jxn/Tum-Hi-Ho-From-Aashiqui-2.mp3?rlkey=m66eqbg4t250wh13j61h380uv&st=sly1bmok&raw=1" type="audio/mpeg">
   </audio>
-
+  
   <script>
-    const messages = [
-      "I Love You",
-      "Happy Anniversary",
-      "You make my life complete",
-      "Hrishi ❤️ Adi",
-      "Forever Together"
-    ];
+    const messages = ["🌹"];
     function createRose() {
       const r = document.createElement("div");
       r.className = "rose";
       r.style.left = Math.random() * window.innerWidth + "px";
-      r.innerHTML = "🌹<br>" + messages[Math.floor(Math.random() * messages.length)];
+      r.innerHTML = messages[0];
       document.body.appendChild(r);
       setTimeout(() => r.remove(), 10000);
     }
     setInterval(createRose, 500);
-
-    // Autoplay logic with user interaction fallback
-    const bgMusic = document.getElementById("bgMusic");
-    function playMusic() {
-      bgMusic.play().catch(() => {
-        // Autoplay blocked, will play on user interaction
-      });
-    }
-    playMusic();
-    document.body.addEventListener("click", playMusic);
-    document.body.addEventListener("touchstart", playMusic);
   </script>
 </body>
 </html>
