--- a/index.html
+++ b/index.html
@@ -2,110 +2,203 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hrishi ❤️ Adi 🌹</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hrishi ❤️ Adi — Forever</title>
   <style>
-    body {
-      margin: 0; padding: 0;
-      background: radial-gradient(circle, #ffe6e6, #fff);
-      overflow: hidden;
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
+    :root{
+      --pink:#d6336c;
+      --soft:#fff0f6;
+      --accent:#ff6b92;
+      --glass: rgba(255,255,255,0.18);
+      --glass-2: rgba(255,255,255,0.28);
     }
-    h1 { margin-top: 20px; color: #d6336c; }
-    .rose {
-      position: absolute;
-      font-size: 24px;
-      animation: rise 10s linear infinite;
-      opacity: 0;
-      white-space: pre-line;
-      text-align: center;
-      color: #b30059;
-    }
-    @keyframes rise {
-      from { transform: translateY(100vh); opacity: 0; }
-      to { transform: translateY(-10vh); opacity: 1; }
-    }
-    .shayari {
-      position: relative; top: 20px;
-      width: 90%; margin: 20px auto;
-      font-size: 18px; color: #b30059;
-      line-height: 1.6;
-      min-height: 150px;
-    }
-    .drive-button {
-      position: absolute; bottom: 10px;
-      left: 50%; transform: translateX(-50%);
-      background-color: #d6336c;
-      color: white; padding: 10px 20px;
-      border: none; border-radius: 20px;
-      font-size: 18px;
-      text-decoration: none;
+    html,body{height:100%; margin:0; padding:0; font-family: 'Segoe UI', system-ui, -apple-system, Roboto, 'Poppins', sans-serif; background: radial-gradient(circle at 10% 10%, #fff2f6 0%, #ffeef0 20%, #fff 100%); color: #2b0a20; overflow-x:hidden;}
+    .wrap{min-height:100vh; display:flex; flex-direction:column; align-items:center; justify-content:flex-start; padding:28px 16px 60px;}
+    header{margin-top:6px; text-align:center;}
+    h1{font-size:clamp(22px,4vw,36px); color:var(--pink); margin:8px 0 6px; letter-spacing:0.6px;}
+    h2{color: #9b1f4a; margin:12px 0;}
+    .subtitle{color:#5b2138; opacity:0.85; margin-bottom:8px;}
+    .rose{position:fixed; font-size:20px; pointer-events:none; z-index:1; animation:rise 10s linear infinite;}
+    @keyframes rise{0%{transform:translateY(100vh) scale(.6); opacity:0} 60%{opacity:1} 100%{transform:translateY(-20vh) scale(1.15); opacity:0}}
+    .card{width:100%; max-width:920px; background: linear-gradient(180deg, rgba(255,255,255,0.7), rgba(255,255,255,0.62)); border-radius:18px; padding:18px; box-shadow:0 10px 30px rgba(107,27,60,0.12); backdrop-filter: blur(6px); border:1px solid rgba(255,255,255,0.6);}
+    .top-row{display:flex; gap:12px; align-items:center; justify-content:space-between; flex-wrap:wrap;}
+    .names {text-align:left;}
+    .names .couple{font-weight:700; font-size:18px; color:var(--accent);}
+    .together-box{background:var(--glass); padding:10px 14px; border-radius:12px; font-weight:600; color: #43122a;}
+    .gallery{display:flex; gap:10px; flex-wrap:wrap; justify-content:center; margin-top:12px;}
+    .gallery img{width:120px; height:120px; object-fit:cover; border-radius:12px; box-shadow:0 8px 18px rgba(0,0,0,0.12); border:4px solid rgba(255,255,255,0.7); transition:transform .25s}
+    .gallery img:hover{transform:scale(1.06)}
+    .manifesto{margin-top:18px; background:linear-gradient(90deg, rgba(255,220,230,0.6), rgba(255,240,245,0.55)); padding:18px; border-radius:12px; color:#3b1026; font-size:15px; line-height:1.5; text-align:left;}
+    .manifesto .big{font-size:18px; font-weight:700; color:var(--pink); margin-bottom:8px; text-align:center;}
+    .countdown{margin-top:14px; font-size:18px; display:flex; gap:10px; flex-wrap:wrap; justify-content:center; align-items:center;}
+    .countdown .time{background:var(--glass-2); padding:10px 12px; border-radius:10px; min-width:90px; font-weight:700; color: #4a122e;}
+    .actions{display:flex; gap:10px; justify-content:center; margin-top:14px; flex-wrap:wrap;}
+    .btn{background:var(--pink); color:white; border:none; padding:10px 16px; border-radius:999px; font-weight:700; text-decoration:none; cursor:pointer; box-shadow:0 6px 18px rgba(214,51,108,0.14)}
+    .btn.ghost{background:transparent; color:var(--pink); border:2px solid rgba(214,51,108,0.12)}
+    .popup{position:fixed; left:50%; top:50%; transform:translate(-50%,-50%) scale(0.98); background: linear-gradient(180deg,#fff,#fff0f7); border-radius:14px; padding:18px; width:90%; max-width:560px; box-shadow:0 20px 60px rgba(107,27,60,0.18); z-index:50; display:none;}
+    .popup.show{display:block; animation:pop .28s ease-out;}
+    @keyframes pop{from{transform:translate(-50%,-50%) scale(.9); opacity:0} to{transform:translate(-50%,-50%) scale(1); opacity:1}}
+    .popup .title{font-weight:800; color:var(--accent); margin-bottom:8px;}
+    .popup .close{position:absolute; right:14px; top:10px; background:transparent; border:none; font-weight:800; font-size:18px; color:#8a1f48; cursor:pointer}
+    .vows{font-size:14px; color:#4a122e; line-height:1.55;}
+    footer{margin-top:22px; color:#6f2a43; opacity:0.9; font-size:13px;}
+    @media (max-width:520px){
+      .gallery img{width:90px;height:90px}
+      .manifesto{font-size:14px}
     }
   </style>
 </head>
 <body>
-  <h1>🌹 Happy 5th Anniversary – Hrishi ❤️ Adi 🌹</h1>
+  <div id="rosesRoot"></div>
 
-  <div class="shayari" id="shayari"></div>
+  <div class="wrap">
+    <header>
+      <h1>🌹 Hrishi ❤️ Adi — Ek Amar Prem Katha 🌹</h1>
+      <div class="subtitle">Jahan Shiv-Parvati jaisa aashiqana bandhan, Ram-Sita jaisa shraddha—wahin humara rishta.</div>
+    </header>
 
-  <a class="drive-button" href="https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link" target="_blank">
-    Click Here Jaanuuu 💖
-  </a>
+    <main class="card" role="main" aria-labelledby="main-heading">
+      <div class="top-row">
+        <div class="names">
+          <div class="couple">Hrishi ✦ Adi</div>
+          <div style="font-size:13px; color:#5a2b43; margin-top:4px;">Tum meri devi ho — main tumhara bhagat. Har saans me tumhara naam.</div>
+        </div>
 
-  <audio id="bgMusic" loop autoplay>
+        <div class="together-box" title="Together Since">
+          <div style="font-size:12px; opacity:0.9">Together since</div>
+          <div id="sinceDate" style="font-size:14px; margin-top:4px; font-weight:800;">19 March 2025 • 12:02</div>
+        </div>
+      </div>
+
+      <!-- gallery with your real Google Drive images -->
+      <section style="margin-top:14px;">
+        <h2 style="margin:6px 0 10px;">Our Memories — Khushbu Wali Yaadein 📸</h2>
+        <div class="gallery" id="gallery">
+          <img src="https://drive.google.com/uc?export=view&id=1_eySp0sMBaeQohKuIE70CqmeFvlrRS8c" alt="Memory 1">
+          <img src="https://drive.google.com/uc?export=view&id=1egaWJEmoAHgoJlApRMe196gkUelyHaxj" alt="Memory 2">
+          <img src="https://drive.google.com/uc?export=view&id=1ipmPRkJ0voUk2yllMZM3eWZeBOwd6QKv" alt="Memory 3">
+          <img src="https://drive.google.com/uc?export=view&id=146RPK998knObmU874BOYXo13il4yaIDC" alt="Memory 4">
+        </div>
+      </section>
+
+      <section class="manifesto" aria-live="polite">
+        <div class="big">Divine Love Manifesto — Hamari Pyaari Dastan</div>
+        <div id="manifestoText"></div>
+      </section>
+
+      <div class="countdown" aria-live="polite" role="status" style="margin-top:12px;">
+        <div style="font-weight:700; color:#611936;">⏳ Humari Saath-Saath Ka Har Pal</div>
+        <div id="elapsed" style="display:flex; gap:8px; margin-left:8px; flex-wrap:wrap; justify-content:center;">
+          <div class="time" id="days">0d</div>
+          <div class="time" id="hours">0h</div>
+          <div class="time" id="mins">0m</div>
+          <div class="time" id="secs">0s</div>
+        </div>
+      </div>
+
+      <div class="actions">
+        <button class="btn" id="openVow">Click for My Eternal Vow ✨</button>
+        <a class="btn ghost" id="openDrive" target="_blank" rel="noopener">Our Secret Folder (Drive)</a>
+      </div>
+    </main>
+
+    <footer>Jaan, tum meri devi ho — main tumhara bhakta. Har breath tumhare naam. ❤️</footer>
+  </div>
+
+  <div class="popup" id="vowPopup" role="dialog" aria-modal="true" aria-labelledby="vowTitle">
+    <button class="close" id="closeVow">&times;</button>
+    <div class="title" id="vowTitle">Meri Vachan-Patra — Tumhare Liye</div>
+    <div class="vows">
+      <p>Priye Adi,</p>
+      <p>Main, Hrishi, aaj se hamesha ke liye yeh vachan deta hoon: jaise Shiv ne Parvati ko anant tapasya se paaya, waise hi main tumhe apne dil ki bhakti se paata rahunga. Tum meri devi ho; tumhare har aansu ko main apna kar lunga, tumhare har sapne ko apna karunga.</p>
+      <p>Jab tak suraj-chand rahenge, main tumhara saath nibhaunga — Ram ki shraddha jaisa wafadari, Sita ki pyaar jaisa nishtha. Har raah me tumhara haath tham kar chalunga. Main tera bhagat hoon; tum meri puja ho. Yeh mera wada hai—aj, kal aur hamesha.</p>
+      <p style="margin-top:10px; font-weight:700; color:var(--pink)">— Hamesha tumhara, Hrishi</p>
+    </div>
+  </div>
+
+  <audio id="bgMusic" loop>
     <source src="https://www.dropbox.com/scl/fi/6og4gw2ow8qqkqc3j4jxn/Tum-Hi-Ho-From-Aashiqui-2.mp3?rlkey=m66eqbg4t250wh13j61h380uv&raw=1" type="audio/mpeg">
   </audio>
 
   <script>
-    // Flying roses
-    const messages = [
-      "I Love You 🌹",
-      "Happy Anniversary 🌹",
-      "Hrishi ❤️ Adi 🌹",
-      "Forever Together 🌹",
-      "My Soulmate 🌹"
+    const togetherSince = new Date("March 19, 2025 12:02:00").getTime();
+    const driveLink = "https://drive.google.com/drive/folders/1cWF7gmLEaBAVNVLhWf8g6MAZXOclQOYj?usp=drive_link";
+    document.getElementById('openDrive').href = driveLink;
+
+    const roseMessages = [
+      "Tum meri devi ho",
+      "Shiv-Parvati jaisa pyaar",
+      "Ram-Sita ki shraddha",
+      "Main tumhara bhagat",
+      "Forever & Always",
+      "Tumhara har muskurana meri jeet"
     ];
-    function createRose() {
-      const r = document.createElement("div");
-      r.className = "rose";
-      r.style.left = Math.random() * window.innerWidth + "px";
-      r.innerHTML = messages[Math.floor(Math.random() * messages.length)];
-      document.body.appendChild(r);
-      setTimeout(() => r.remove(), 10000);
-    }
-    setInterval(createRose, 700);
 
-    // Typing effect
-    const shayariText = 
-      "❤️ “Hum dono ka pyaar na bas lafzon me hai, na hi sirf ehsaason me…\n" +
-      "Ye to wo rishta hai jo rooh tak utar gaya hai…\n" +
-      "Jitna sochu utna hi gehra lagta hai,\n" +
-      "Jaise dil ne sirf aap ko chahne ke liye dhadakna seekha ho.” ❤️\n\n" +
-      "🌸 “Aap ki yaadon ka ek kone me bhi itna sukoon hai,\n" +
-      "Sochta hoon agar aap saamne ho to poori duniya kitni haseen lagne lagegi…” 🌸";
-
-    const shayariDiv = document.getElementById("shayari");
-    let i = 0;
-    function typeShayari() {
-      if (i < shayariText.length) {
-        shayariDiv.innerHTML += shayariText.charAt(i) === "\n" ? "<br>" : shayariText.charAt(i);
-        i++;
-        setTimeout(typeShayari, 50); // typing speed in ms
-      }
+    function makeRose(){
+      const d = document.createElement('div');
+      d.className = 'rose';
+      const left = Math.random()*95;
+      d.style.left = left + 'vw';
+      d.style.fontSize = (14 + Math.random()*22) + 'px';
+      d.style.opacity = (0.7 + Math.random()*0.3);
+      const msg = roseMessages[Math.floor(Math.random()*roseMessages.length)];
+      d.innerHTML = "🌹<br><span style='font-size:12px;color:#6a2138;font-weight:700;line-height:1'>" + msg + "</span>";
+      document.body.appendChild(d);
+      setTimeout(()=> d.remove(), 10000 + Math.random()*4000);
     }
-    window.onload = typeShayari;
+    setInterval(makeRose, 600);
 
-    // Autoplay fallback for mobile browsers
-    const bgMusic = document.getElementById("bgMusic");
-    function playMusic() {
-      bgMusic.play().catch(() => {
-        // Autoplay blocked, will play on user interaction
-      });
+    function updateElapsed(){
+      const now = Date.now();
+      let diff = now - togetherSince;
+      const days = Math.floor(diff / (1000*60*60*24));
+      diff -= days*(1000*60*60*24);
+      const hours = Math.floor(diff / (1000*60*60));
+      diff -= hours*(1000*60*60);
+      const mins = Math.floor(diff / (1000*60));
+      diff -= mins*(1000*60);
+      const secs = Math.floor(diff / 1000);
+      document.getElementById('days').innerText = days + "d";
+      document.getElementById('hours').innerText = hours + "h";
+      document.getElementById('mins').innerText = mins + "m";
+      document.getElementById('secs').innerText = secs + "s";
     }
-    playMusic();
-    document.body.addEventListener("click", playMusic);
-    document.body.addEventListener("touchstart", playMusic);
+    updateElapsed();
+    setInterval(updateElapsed, 1000);
+
+    const manifestoLines = [
+      "Jab se 19 March 2025, 12:02 pe tum meri zindagi me aayi — har saans pe tumhara naam likha gaya.",
+      "Tum mere liye Shiv-Parvati ki devi ho — shakti aur komalta ka sangam. Tumhari muskaan mere liye tapasya ka phal hai.",
+      "Hamari prem kahani me shraddha hai, wafadari hai, aur ek aisi bhakti jo har kathin raste ko roshan kar de.",
+      "Main tumhara bhagat hoon: tumhara dard mera dard, tumhari khushi mera jeet. Main har subah tumhari surat apne man me dekhunga.",
+      "Jahan Ram ne Sita ke saath anant vishwas nibhaya, wahi vishwas main tumse karta hoon — kabhi na tootne wala, kabhi na kam hoga.",
+      "Yeh sirf shabd nahi; yeh mera jeevan-sankalp hai — aj, kal, hamesha. Tum meri devi, main tumhara bhakt — hum sadaiv ek."
+    ];
+    const manifestoEl = document.getElementById('manifestoText');
+    (function revealManifesto(i = 0){
+      if(i >= manifestoLines.length) return;
+      const p = document.createElement('p');
+      p.style.margin = '8px 0';
+      p.style.opacity = '0';
+      p.style.transition = 'opacity .8s ease, transform .8s ease';
+      p.innerText = manifestoLines[i];
+      manifestoEl.appendChild(p);
+      setTimeout(()=>{ p.style.opacity = '1'; p.style.transform = 'translateY(0)'; }, 120);
+      setTimeout(()=> revealManifesto(i+1), 700);
+    })();
+
+    const openVow = document.getElementById('openVow');
+    const vowPopup = document.getElementById('vowPopup');
+    const closeVow = document.getElementById('closeVow');
+    openVow.addEventListener('click', ()=> { vowPopup.classList.add('show'); });
+    closeVow.addEventListener('click', ()=> { vowPopup.classList.remove('show'); });
+    window.addEventListener('click', (e)=>{ if(e.target === vowPopup) vowPopup.classList.remove('show'); });
+
+    const bgMusic = document.getElementById('bgMusic');
+    function tryPlayMusic(){ bgMusic.play().catch(()=>{}); }
+    tryPlayMusic();
+    document.body.addEventListener('click', tryPlayMusic, {once:true});
+    document.body.addEventListener('touchstart', tryPlayMusic, {once:true});
   </script>
 </body>
 </html>
