--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <button class="close" id="closeVow">&times;</button>
     <div class="title" id="vowTitle">Meri Vachan-Patra — Tumhare Liye</div>
     <div class="vows">
-      <p>Priye Adi,</p>
-      <p>Main, Hrishi, aaj se hamesha ke liye yeh vachan deta hoon: jaise Shiv ne Parvati ko anant tapasya se paaya, waise hi main tumhe apne dil ki bhakti se paata rahunga. Tum meri devi ho; tumhare har aansu ko main apna kar lunga, tumhare har sapne ko apna karunga.</p>
+      <p>Priye Hrishi,</p>
+      <p>Main, Adi, aaj se hamesha ke liye yeh vachan deta hoon: jaise Shiv ne Parvati ko anant tapasya se paaya, waise hi main tumhe apne dil ki bhakti se paata rahunga. Tum meri devi ho; tumhare har aansu ko main apna kar lunga, tumhare har sapne ko apna karunga.</p>
       <p>Jab tak suraj-chand rahenge, main tumhara saath nibhaunga — Ram ki shraddha jaisa wafadari, Sita ki pyaar jaisa nishtha. Har raah me tumhara haath tham kar chalunga. Main tera bhagat hoon; tum meri puja ho. Yeh mera wada hai—aj, kal aur hamesha.</p>
       <p style="margin-top:10px; font-weight:700; color:var(--pink)">— Hamesha tumhara, Hrishi</p>
     </div>
@@ -202,3 +202,4 @@
   </script>
 </body>
 </html>
+
